--- a/LoxleyOrbit.FaceScan/Properties/Resources.resx
+++ b/LoxleyOrbit.FaceScan/Properties/Resources.resx
@@ -127,9 +127,6 @@
   <data name="arrow_r3" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\bin\x86\Debug\Images\arrow_r3.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Head&amp;Shoulder_Black" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Head&amp;Shoulder_Black.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="loading" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\loading.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -142,8 +139,14 @@
   <data name="arrow_L" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\bin\x86\Debug\Images\arrow_L.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Head&amp;Shoulder_Black" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\Head&amp;Shoulder_Black.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Screenshot 2023-05-01 115107" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Screenshot 2023-05-01 115107.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="button_retry_2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\button_retry_2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="DashWhite" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\bin\x86\Debug\Images\DashWhite.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -157,13 +160,22 @@
   <data name="button_ok" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\button_ok1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="button_no" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\button_no.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="ezgif.com-resize" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ezgif.com-resize.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Load_Clock1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Load_Clock1.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="bg1920_fail" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\bg1920_fail.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Load_Clock1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Load_Clock1.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="button_retry" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\button_retry.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="button_retry_21" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\button_retry_21.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
